# SKID-rust

./: ARCHITECTURE.md  Cargo.toml  PERFORMANCE.md  build.rs  plan.md
.github/instructions/: skid-int.instructions.md
dotnet/: LuticaSKIDBinderToCSharp.g.cs
jvm/src/main/java/dev/lutica/skid/: SKIDImage.java  SKIDNative.java
src/: lib.rs
src/api/: mod.rs
src/api/ffi_modules/: mod.rs
src/api/jni_modules/: mod.rs
src/model/: mod.rs  skid_color.rs  skid_image.rs  skid_vector3.rs
src/model/ffi_modules/: mod.rs  skid_image_ffi.rs
src/processor/: example_generator.rs  image_rotation_action.rs  image_synthesis_action.rs  make_normal_map.rs  mod.rs  resize_image.rs
src/test/: file_test.rs  gpu_call_tests.rs  mod.rs
src/utils/: file_io.rs  gpu_opt.rs  graphic_fn.rs  mod.rs
